<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Yaml Workbench</name>
  <version>0.1.1</version>
  <date>2022-09-08</date>
  <description>A FreeCAD addon that loads and manipulates objects via YAML files.</description>
  <maintainer email="ledi.mambix@gmail.com">FrontISTR-Commons</maintainer>
  <license file="LICENSE">LGPLv2.1</license>
  <url type="repository" branch="master">https://github.com/Mambix/FreeCAD-yaml-workbench</url>
  <url type="bugtracker">https://github.com/Mambix/FreeCAD-yaml-workbench/issues</url>
  <url type="documentation">https://github.com/Mambix/FreeCAD-yaml-workbench/blob/master/README.md</url>
  <icon>Resources/YAML_workbench_icon.svg</icon>
  <depend>PyYaml</depend>
  <freecadmin>0.19</freecadmin>

  <content>
    <workbench>
      <icon>Resources/YAML_workbench_icon.svg</icon>
      <subdirectory>./</subdirectory>
      <classname>Import_Yml</classname>
      <tag>Mambix</tag>
      <tag>import</tag>
      <tag>yaml</tag>
    </workbench>
  </content>
</package>